# learn-bevy

./: .gitignore  enemies.txt
bevy-01/: Cargo.toml
bevy-01/src/: main.rs
bevy-02/: Cargo.toml
bevy-02/.cargo/: config.toml
bevy-02/src/: main.rs
bevy-03/: Cargo.toml
bevy-03/src/: components.rs  main.rs  resources.rs
